# syncd

./: .gitignore  CMakeLists.txt  FindLibMongoC.cmake  README.md  a.out  actors.c  actors.h  configobject.c  configobject.h  dump.c  main.c  net.c  net.h  parseconfig.c  parseconfig.h  pullactions.c  pullactions.h  pushactions.c  pushactions.h  sync-config.json  syncdSettings.conf
CMakeRecipes/: Findhiredis.cmake
saved/: dump.c
